# memora

./: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
alembic/: env.py
alembic/versions/: 20260608_0001_initial_memora_schema.py
app/: main.py
app/api/: deps.py  router.py
app/api/endpoints/: memory.py
app/api/routes/: health.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: __init__.py  memory.py
app/schemas/: __init__.py  memory.py
app/services/: embedding.py  memory_service.py
tests/: conftest.py
tests/api/: test_memory_endpoints.py
tests/services/: test_memory_service.py
